force-app/main/default/objects/CRMforNonProfit__InboundEmailRecord__c/CRMforNonProfit__InboundEmailRecord__c.object-meta.xml
<CustomObject>
    <description>Záznam o příchozím emailu</description>
    <label>Inbound email</label>
    <nameField>
        <label>Inbound email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>