force-app/main/default/objects/CRMforNonProfit__InboundEmailRecord__c/fields/CRMforNonProfit__Email_body__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Email_body__c</fullName>
    <label>Email body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>