force-app/main/default/objects/CRMforNonProfit__InboundEmailRecord__c/fields/CRMforNonProfit__Error_text__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Error_text__c</fullName>
    <label>Error text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>