force-app/main/default/objects/CRMforNonProfit__InboundEmailRecord__c/fields/CRMforNonProfit__From__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__From__c</fullName>
    <description>Email address, that was the email sent from.</description>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>