force-app/main/default/objects/CRMforNonProfit__InboundEmailRecord__c/fields/CRMforNonProfit__Subject__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Subject__c</fullName>
    <description>Subject of the email</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>