force-app/main/default/objects/CRMforNonProfit__InboundEmailRecord__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>NAME</columns>
    <columns>CRMforNonProfit__Subject__c</columns>
    <columns>CRMforNonProfit__Status__c</columns>
    <columns>CRMforNonProfit__From__c</columns>
    <columns>CRMforNonProfit__Error_text__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>